--- a/ib-repo-start/src/main/resources/application.yml
+++ b/ib-repo-start/src/main/resources/application.yml
@@ -1,9 +1,14 @@
 spring:
   profiles:
     active:
-    - dev  application:    name: ib-repo
+    - dev  application:    name: ib-repo  datasource:    username: root
+    password: root    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/infinity_battle?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
 server:
   port: 80
+logging:
+  level:
+    root: info
 
 ---
 spring:  profiles:
