完成登录注册接口、获取资源文件接口

--- a/ib-repo-start/src/main/resources/application.yml
+++ b/ib-repo-start/src/main/resources/application.yml
@@ -9,6 +9,7 @@ server:
 logging:
   level:
     root: info
+    org.springframework.web.servlet.mvc.method.annotation: error
 
 ---
 spring:  profiles:
