新增获取剧本资源文件接口，去掉获取角色图片和角色配置文件

--- a/ib-repo-start/src/main/resources/config-dev.properties
+++ b/ib-repo-start/src/main/resources/config-dev.properties
@@ -1,7 +1,5 @@
 # File
-# conf 文件目录
-file.conf.path = D:/tmp/ib/conf/
-# img 文件目录
-file.img.path = D:/tmp/ib/img/
 # drama 文件目录
-file.drama.path = D:/tmp/ib/dramas/
+file.drama.path = D:/tmp/ib/drama/
+# drama 资源文件目录
+file.drama.res.path = D:/tmp/ib/dramaRes/
