--- a/ib-repo-start/src/main/resources/config-prod.properties
+++ b/ib-repo-start/src/main/resources/config-prod.properties
@@ -1,7 +1,5 @@
 # File
-# conf 文件目录
-file.conf.path = /var/ib/conf/
-# img 文件目录
-file.img.path = /var/ib/img/
 # drama 文件目录
-file.drama.path = /var/ib/dramas/
+file.drama.path = /var/ib/drama/
+# drama 资源文件目录
+file.drama.res.path= /var/lib/dramaRes/
