--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>1.8</java.version>
 		<spring.version>2.2.4.RELEASE</spring.version>
 		<ib.repo.version>0.0.1-SNAPSHOT</ib.repo.version>
+		<ib.repo.version>0.0.1-SNAPSHOT</ib.repo.version>
 		<lombok.version>1.18.8</lombok.version>
 		<mysql.driver.version>8.0.18</mysql.driver.version>
 		<mybatis.spring.boot.version>2.1.1</mybatis.spring.boot.version>
