--- a/ib-repo-api/pom.xml
+++ b/ib-repo-api/pom.xml
@@ -10,6 +10,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>cn.milai</groupId>
+			<artifactId>beginning-api</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
