--- a/ib-repo-start/pom.xml
+++ b/ib-repo-start/pom.xml
@@ -10,16 +10,27 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>${spring.version}</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
+			<plugin>    
+			<artifactId>maven-compiler-plugin</artifactId>    
+			<configuration>    
+				<source>1.8</source>    
+				<target>1.8</target>    
+			</configuration>    
+		</plugin> 
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+                <mainClass>cn.milai.ibrepo.IBRepoApplication</mainClass>
+            </configuration>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>repackage</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
 		</plugins>
 	</build>
 
@@ -27,6 +38,10 @@
 		<dependency>
 			<groupId>cn.milai</groupId>
 			<artifactId>ib-repo-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>cn.milai</groupId>
+			<artifactId>beginning-util</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -87,6 +102,11 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
