--- a/ib-repo-start/src/main/resources/application.yml
+++ b/ib-repo-start/src/main/resources/application.yml
@@ -3,19 +3,23 @@ spring:
     active:
     - dev  application:    name: ib-repo  datasource:    username: root
     password: root    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/infinity_battle?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+    url: jdbc:mysql://localhost:3306/ib?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true  redis:    host: localhost
+    port: 6379
 server:
   port: 80
 logging:
   level:
     root: info
-    org.springframework.web.servlet.mvc.method.annotation: error
+    "[org.springframework.web.servlet.mvc.method.annotation]": error
 
 ---
 spring:  profiles:
   - dev
-logging:  level:    cn.milai.ib.repo: info
-
+logging:  level:    "[cn.milai.ibrepo]": info
+ibrepo:  filepath:    drama: D:/tmp/ib/drama/
+    drama-res: D:/tmp/ib/dramaRes/
+    
 ---
 spring:  profiles:  - prod
-logging:  level:    cn.milai.ib.repo: info
+logging:  level:    "[cn.milai.ibrepo]": infoibrepo:  filepath:    drama: /var/ib/drama/
+    drama-res: /var/lib/dramaRes/
