--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,19 @@
 	<name>ib-repo</name>
 	<packaging>pom</packaging>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.2.4.RELEASE</version>
+	</parent>
+
 	<modules>
 		<module>ib-repo-api</module>
 		<module>ib-repo-start</module>
 	</modules>
 
 	<properties>
-		<java.version>1.8</java.version>
-		<spring.version>2.2.4.RELEASE</spring.version>
 		<beginning.version>0.0.1-SNAPSHOT</beginning.version>
-		<ib.repo.version>0.0.1-SNAPSHOT</ib.repo.version>
 		<ib.repo.version>0.0.1-SNAPSHOT</ib.repo.version>
 		<lombok.version>1.18.8</lombok.version>
 		<mysql.driver.version>8.0.18</mysql.driver.version>
@@ -40,35 +43,9 @@
 				<version>${beginning.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-web</artifactId>
-				<version>${spring.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-data-redis</artifactId>
-				<version>${spring.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>jakarta.validation</groupId>
-				<artifactId>jakarta.validation-api</artifactId>
-				<version>${jakarta.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-devtools</artifactId>
-				<version>${spring.version}</version>
-				<scope>runtime</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-mail</artifactId>
-				<version>${spring.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-aop</artifactId>
-				<version>${spring.version}</version>
+				<groupId>cn.milai</groupId>
+				<artifactId>beginning-util</artifactId>
+				<version>${beginning.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.projectlombok</groupId>
@@ -105,11 +82,6 @@
 				<groupId>javax.inject</groupId>
 				<artifactId>javax.inject</artifactId>
 				<version>1</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-validation</artifactId>
-				<version>${spring.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.google.guava</groupId>
