--- a/ib-repo-start/pom.xml
+++ b/ib-repo-start/pom.xml
@@ -10,27 +10,27 @@
 
 	<build>
 		<plugins>
-			<plugin>    
-			<artifactId>maven-compiler-plugin</artifactId>    
-			<configuration>    
-				<source>1.8</source>    
-				<target>1.8</target>    
-			</configuration>    
-		</plugin> 
-        <plugin>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
-            <configuration>
-                <mainClass>cn.milai.ibrepo.IBRepoApplication</mainClass>
-            </configuration>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>repackage</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>cn.milai.ibrepo.IBRepoApplication</mainClass>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -41,7 +41,7 @@
 		</dependency>
 		<dependency>
 			<groupId>cn.milai</groupId>
-			<artifactId>beginning-util</artifactId>
+			<artifactId>beginning-base</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -91,7 +91,7 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
+		<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency>
