--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	</modules>
 
 	<properties>
-		<beginning.version>0.0.1-SNAPSHOT</beginning.version>
+		<beginning.version>0.0.2-SNAPSHOT</beginning.version>
 		<ib.repo.version>0.0.1-SNAPSHOT</ib.repo.version>
 		<lombok.version>1.18.8</lombok.version>
 		<mysql.driver.version>8.0.18</mysql.driver.version>
@@ -29,6 +29,26 @@
 		<jakarta.version>2.0.2</jakarta.version>
 		<mapstruct.version>1.3.1.Final</mapstruct.version>
 	</properties>
+
+	<build>
+		<plugins><!-- 打包源码 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<configuration>
+					<attach>true</attach>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 	<dependencyManagement>
 		<dependencies>
@@ -44,7 +64,7 @@
 			</dependency>
 			<dependency>
 				<groupId>cn.milai</groupId>
-				<artifactId>beginning-util</artifactId>
+				<artifactId>beginning-base</artifactId>
 				<version>${beginning.version}</version>
 			</dependency>
 			<dependency>
