--- a/pom.xml
+++ b/pom.xml
@@ -22,16 +22,15 @@
 	<properties>
 		<beginning.version>0.0.2-SNAPSHOT</beginning.version>
 		<ib.repo.version>0.0.1-SNAPSHOT</ib.repo.version>
-		<lombok.version>1.18.8</lombok.version>
 		<mysql.driver.version>8.0.18</mysql.driver.version>
 		<mybatis.spring.boot.version>2.1.1</mybatis.spring.boot.version>
 		<jedis.version>3.2.0</jedis.version>
-		<jakarta.version>2.0.2</jakarta.version>
 		<mapstruct.version>1.3.1.Final</mapstruct.version>
 	</properties>
 
 	<build>
-		<plugins><!-- 打包源码 -->
+		<!-- 打包源码 -->
+		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -68,11 +67,6 @@
 				<version>${beginning.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.projectlombok</groupId>
-				<artifactId>lombok</artifactId>
-				<version>${lombok.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
 				<version>${mysql.driver.version}</version>
@@ -107,11 +101,6 @@
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
 				<version>28.1-jre</version>
-			</dependency>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.12</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
