修改 groupId、artifactId，适应 beginning 变化，去除多余依赖声明和文件

--- a/ib-repo-api/pom.xml
+++ b/ib-repo-api/pom.xml
@@ -2,15 +2,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>cn.milai</groupId>
-		<artifactId>ib-repo</artifactId>
+		<groupId>cn.milai.ibrepo</groupId>
+		<artifactId>ib-repo-parent</artifactId>
 		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>ib-repo-api</artifactId>
 
 	<dependencies>
 		<dependency>
-			<groupId>cn.milai</groupId>
+			<groupId>cn.milai.beginning</groupId>
 			<artifactId>beginning-decoupling</artifactId>
 		</dependency>
 		<dependency>
