--- a/ib-repo-start/pom.xml
+++ b/ib-repo-start/pom.xml
@@ -2,8 +2,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>cn.milai</groupId>
-		<artifactId>ib-repo</artifactId>
+		<groupId>cn.milai.ibrepo</groupId>
+		<artifactId>ib-repo-parent</artifactId>
 		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>ib-repo-start</artifactId>
@@ -40,11 +40,11 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>cn.milai</groupId>
+			<groupId>cn.milai.ibrepo</groupId>
 			<artifactId>ib-repo-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>cn.milai</groupId>
+			<groupId>cn.milai.beginning</groupId>
 			<artifactId>beginning-base</artifactId>
 		</dependency>
 		<dependency>
